[tool.poetry]
name = "health-is-science"
version = "0.1.0"
description = ""
authors = ["zacharypfiz <ztpfizcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
